syntax = "proto3";

option java_package = "com.huy.chess.proto";
option java_multiple_files = true;

message User {
  bool isLogin = 1;
  string id = 2;
  string name = 3;
  string email = 4;
  string avatar = 5;
  int32 elo = 6;
  int32 puzzleElo = 7;
}